--- a/GameFramework/PP01.HelloSDL/PP01.HelloSDL.vcxproj.filters
+++ b/GameFramework/PP01.HelloSDL/PP01.HelloSDL.vcxproj.filters
@@ -45,6 +45,9 @@
     <ClCompile Include="GameStateMachine.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="MenuButton.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="game.h">
@@ -86,5 +89,11 @@
     <ClInclude Include="GameStateMachine.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
+    <ClInclude Include="MenuButton.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="ClassDiagram.cd" />
   </ItemGroup>
 </Project>
