--- a/GameFramework/PP01.HelloSDL/PP01.HelloSDL.vcxproj.filters
+++ b/GameFramework/PP01.HelloSDL/PP01.HelloSDL.vcxproj.filters
@@ -57,6 +57,9 @@
     <ClCompile Include="GameOverState.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="Fire.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="game.h">
@@ -108,6 +111,9 @@
       <Filter>헤더 파일</Filter>
     </ClInclude>
     <ClInclude Include="GameOverState.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="Fire.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
   </ItemGroup>
